<resources>
	<string name="hello">Quick Chat</string>
    <string name="app_name">Quick Chat</string>
    <string name="friend_list">List of Friends</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Get In</string>
    <string name="cancel">Cancel</string>
    <string name="messaging">Messaging</string>
    <string name="local_service_started">AndroidChatter Started</string>
    <string name="local_service_stopped">AndroidChatter stopped</string>
	<string name="local_service_connected">Connected_local</string>
	<string name="OK">Done</string>
	<string name="not_connected_to_service">Connection is not available</string>	
	<string name="fill_both_username_and_password">You must fill Password and Username</string>
	<string name="make_sure_username_and_password_correct">Is your username and password correct?</string>
	<string name="user_offline">User Offline</string>
	<string name="sign_up">Sign up</string>
	<string name="exit_application">Log Out</string>
	<string name="view_feed">View Feed</string>
	<string name="password_again">Password Again:</string>
	<string name="email">Email</string>
	<string name="signup_fill_all_fields">All Fields are necessary to fill up</string>
	<string name="signup_type_same_password_in_password_fields">Same Password Please</string>
	<string name="signup_failed">Sign up failed because of no connectivity of your Database or Webserver</string>
	<string name="signup_username_crashed">This username has already in our database , try other ones</string>
	<string name="signup_successfull">You are registered successfuly now go back and log in </string>
	<string name="username_and_password_length_short">Password/Username length must be 5 characters</string>
	<string name="add_new_friend">Add Friend</string>
	<string name="user_location">Location search</string>
	<string name="image_upload">Post</string>
	<string name="no_friend">No Friends , select it via Menu</string>
	<string name="add">Add</string>
	<string name="request_sent">Friend Request Sent</string>
	<string name="type_friend_username">Your friend username</string>
	<string name="new_friend_request_exist">New friend request</string>
	<string name="approve_selected_friends">Approve</string>
	<string name="not_connected_to_network">No available Network</string>
	<string name="message_cannot_be_sent">Message not sent</string>
	<string name="empty"></string>
	<string name="empty1"></string>
	<string name="title_list">List</string>
	<string name="title_grid">Grid</string>
	<string name="menu_item_clear_memory_cache">Clear memory cache</string>
	<string name="menu_item_clear_disc_cache">Clear disc cache</string>
	<string name="menu_item_pause_on_scroll">Pause on scroll</string>
	<string name="menu_item_pause_on_fling">Pause on fling</string>

	<string name="ac_name_image_list">Image List Example</string>
	<string name="ac_name_image_grid">Image Grid Example</string>
	<string name="ac_name_image_pager">Image Pager Example</string>
	<string name="ac_name_image_gallery">Image Gallery Example</string>
	<string name="ac_name_complex">Complex Example</string>
	

</resources>
